<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#38CFB6"
    android:orientation="horizontal"
    tools:context=".WeatherFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempa"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#ebf2ed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kindofweather"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#ebf2ed">

        </TextView>
    </LinearLayout>

    <ImageView
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:src="@drawable/rainny"
        android:visibility="visible">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#ebf2ed">

    </TextView>

</LinearLayout>