<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherAndForecastFragment">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1ABC9C">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:rotation="90"
            android:src="@drawable/frame">
        </ImageView>
            <TextView
                android:id="@+id/tempa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/rainy"
                android:text="@string/tempa"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#ebf2ed" />

            <TextView
                android:id="@+id/kindofweather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tempa"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/rainy"
                android:text="@string/kindofweather"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#ebf2ed">

            </TextView>

            <ImageView
                android:id="@+id/rainy"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:src="@drawable/rainny">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:text="@string/city"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#ebf2ed">

            </TextView>
        </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Tung"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".ForecastFragment">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/Monday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#ebf2ed" />

                <ImageView
                    android:layout_width="144px"
                    android:layout_height="144px"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/rainny"
                    android:visibility="visible"
                    app:srcCompat="@drawable/rainny" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kindofweather"
                        android:textColor="#ebf2ed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/tempa"
                        android:textColor="#ebf2ed" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/Tuesday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#ebf2ed" />

                <ImageView
                    android:layout_width="144px"
                    android:layout_height="144px"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/rainny"
                    android:visibility="visible"
                    app:srcCompat="@drawable/rainny" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kindofweather"
                        android:textColor="#ebf2ed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/tempa"
                        android:textColor="#ebf2ed" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/Wednesday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#ebf2ed" />

                <ImageView
                    android:layout_width="144px"
                    android:layout_height="144px"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/rainny"
                    android:visibility="visible"
                    app:srcCompat="@drawable/rainny" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kindofweather"
                        android:textColor="#ebf2ed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/tempa"
                        android:textColor="#ebf2ed" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/Thursday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#ebf2ed" />

                <ImageView
                    android:layout_width="144px"
                    android:layout_height="144px"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/rainny"
                    android:visibility="visible"
                    app:srcCompat="@drawable/rainny" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kindofweather"
                        android:textColor="#ebf2ed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/tempa"
                        android:textColor="#ebf2ed" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/Friday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#ebf2ed" />

                <ImageView
                    android:layout_width="144px"
                    android:layout_height="144px"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/rainny"
                    android:visibility="visible"
                    app:srcCompat="@drawable/rainny" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kindofweather"
                        android:textColor="#ebf2ed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/tempa"
                        android:textColor="#ebf2ed" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/Saturday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#ebf2ed" />

                <ImageView
                    android:layout_width="144px"
                    android:layout_height="144px"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/rainny"
                    android:visibility="visible"
                    app:srcCompat="@drawable/rainny" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kindofweather"
                        android:textColor="#ebf2ed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/tempa"
                        android:textColor="#ebf2ed" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/Sunday"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#ebf2ed" />

                <ImageView
                    android:layout_width="144px"
                    android:layout_height="144px"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/rainny"
                    android:visibility="visible"
                    app:srcCompat="@drawable/rainny" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/kindofweather"
                        android:textColor="#ebf2ed" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/tempa"
                        android:textColor="#ebf2ed" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>